--- a/ideas.html
+++ b/ideas.html
@@ -53,14 +53,16 @@
                         &nbsp;Passeig
                       </h3>
 											<ul>
-												<li>Sac pel cotxet</li>
-												<li>Cadireta pel cotxe</li>
-												<li>Manta pel cotxet i/o cotxe</li>
-                        <li>Bossa/organitzador pel cotxet</li>
-                        <li>Mussolines</li>
-                        <li>Foulard de porteig</li>
+                        <li>
+                          <strike>Sac pel cotxet</strike>&nbsp;<i>(Gràcies iaia Tere!)</i>
+                        </li>
+                        <li><strike>Cadireta pel cotxe</strike>&nbsp;<i>(Gràcies besàvia Maria, iaia Manda i tieta Pote!)</i></li>
+                        <li><strike>Manta pel cotxet i/o cotxe</strike></li>
+                        <li><strike>Bossa/organitzador pel cotxet</strike>&nbsp;<i>(Gràcies iaia Tere!)</i></li>
+                        <li><strike>Mussolines</strike></li>
+                        <li><strike>Foulard de porteig</strike>&nbsp;<i>(Gràcies Imma!)</i></li>
                         <li>Motxilla de porteig</li>
-                        <li>Jaqueta de porteig</li>
+                        <li><strike>Jaqueta de porteig</strike>&nbsp;<i>(Gràcies Gemma!)</i></li>
 											</ul>
 										</div>
 
@@ -87,10 +89,10 @@
                         &nbsp;Habitació
                       </h3>
 											<ul>
-												<li>Llençols mini-bressol (50x80)</li>
-												<li>Llençols moisès (35x75)</li>
+                        <li><strike>Llençols mini-bressol (50x80)</strike></li>
+                        <li><strike>Llençols moisès (35x75)</strike></li>
 												<li>Pijames</li>
-												<li>Mussolines</li>
+                        <li><strike>Mussolines</strike></li>
                         <li>Bressol (a partir de 8 mesos)</li>
 											</ul>
 										</div>
@@ -101,12 +103,12 @@
                         &nbsp;Bany
                       </h3>
 											<ul>
-												<li>Banyera</li>
-                        <li>Esponja</li>
-                        <li>Sabó</li>
-                        <li>Cremes</li>
-                        <li>Tisoretes</li>
-                        <li>Termòmetre</li>
+                        <li><strike>Banyera</strike></li>
+                        <li><strike>Esponja</strike></li>
+                        <li><strike>Sabó</strike>&nbsp;<i>(Gràcies Marta!)</i></li>
+                        <li><strike>Cremes</strike>&nbsp;<i>(Gràcies Marta!)</i></li>
+                        <li><strike>Tisoretes</strike>&nbsp;<i>(Gràcies Marta!)</i></li>
+                        <li><strike>Termòmetre</strike>&nbsp;<i>(Gràcies Marta!)</i></li>
 											</ul>
 										</div>
 
@@ -116,11 +118,11 @@
                         &nbsp;Roba
                       </h3>
 											<ul>
-                        <li>Bodies</li>
-                        <li>Mitjons</li>
-												<li>Pantalons</li>
-                        <li>Polaines</li>
-												<li>Gorros</li>
+                        <li><strike>Bodies</strike></li>
+                        <li><strike>Mitjons</strike></li>
+												<li><strike>Pantalons</strike></li>
+                        <li><strike>Polaines</strike></li>
+												<li><strike>Gorros</strike></li>
 											</ul>
 										</div>
 
@@ -131,9 +133,7 @@
                       </h3>
 											<ul>
 												<li>Tirallet</li>
-                        <li>Biberó</li>
-                        <li>Coixí lactància</li>
-                        <li>Balancí</li>
+                        <li><strike>Coixí lactància</strike></li>
                         <li>Bossetes per a congelar la llet</li>
 											</ul>
 										</div>
