--- a/ideas.html
+++ b/ideas.html
@@ -53,6 +53,7 @@
                         &nbsp;Passeig
                       </h3>
 											<ul>
+                        <li>Motxilla de porteig</li>
                         <li>
                           <strike>Sac pel cotxet</strike>&nbsp;<i>(Gràcies iaia Tere!)</i>
                         </li>
@@ -60,9 +61,8 @@
                         <li><strike>Manta pel cotxet i/o cotxe</strike></li>
                         <li><strike>Bossa/organitzador pel cotxet</strike>&nbsp;<i>(Gràcies iaia Tere!)</i></li>
                         <li><strike>Mussolines</strike></li>
-                        <li><strike>Foulard de porteig</strike>&nbsp;<i>(Gràcies Imma!)</i></li>
-                        <li>Motxilla de porteig</li>
                         <li><strike>Jaqueta de porteig</strike>&nbsp;<i>(Gràcies Gemma!)</i></li>
+                        <li><strike>Foulard de porteig</strike>&nbsp;<i>(Gràcies Imma!)</i></li>
 											</ul>
 										</div>
 
@@ -72,14 +72,11 @@
                         &nbsp;Menjar
                       </h3>
 											<ul>
-												<li>
-                          BabyCook<br />
-                          (BabyCook, BabyCook Neo)
-                        </li>
+												<li>BabyCook</li>
+												<li>Trona</li>
 												<li>Plats</li>
 												<li>Bols</li>
 												<li>Pitets</li>
-												<li>Trona</li>
 											</ul>
 										</div>
 
@@ -89,11 +86,11 @@
                         &nbsp;Habitació
                       </h3>
 											<ul>
+                        <li>Bressol (a partir de 8 mesos)</li>
                         <li><strike>Llençols mini-bressol (50x80)</strike></li>
                         <li><strike>Llençols moisès (35x75)</strike></li>
-												<li>Pijames</li>
+                        <li><strike>Pijames</strike></li>
                         <li><strike>Mussolines</strike></li>
-                        <li>Bressol (a partir de 8 mesos)</li>
 											</ul>
 										</div>
 
@@ -103,12 +100,12 @@
                         &nbsp;Bany
                       </h3>
 											<ul>
-                        <li><strike>Banyera</strike></li>
-                        <li><strike>Esponja</strike></li>
                         <li><strike>Sabó</strike>&nbsp;<i>(Gràcies Marta!)</i></li>
                         <li><strike>Cremes</strike>&nbsp;<i>(Gràcies Marta!)</i></li>
                         <li><strike>Tisoretes</strike>&nbsp;<i>(Gràcies Marta!)</i></li>
                         <li><strike>Termòmetre</strike>&nbsp;<i>(Gràcies Marta!)</i></li>
+                        <li><strike>Banyera</strike></li>
+                        <li><strike>Esponja</strike></li>
 											</ul>
 										</div>
 
@@ -133,8 +130,8 @@
                       </h3>
 											<ul>
 												<li>Tirallet</li>
-                        <li><strike>Coixí lactància</strike></li>
                         <li>Bossetes per a congelar la llet</li>
+                        <li><strike>Coixí lactància</strike></li>
 											</ul>
 										</div>
 
